# chesseng

./: .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml  save_reports.sh
.github/workflows/: test.yml
benches/: full_gen_bench.rs  movegen_bench.rs
research/games/: lichess-initial-releases-round-robin.tournament  quiescence_release.tournament  s1_1_vs_pvs_2.tournament  sandy_release_wins_with_no_tt.pgn  single_round_robin.tournament  tt_pre_release.tournament  tt_release.tournament
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_0/base/: sample.json  tukey.json
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_0/new/: benchmark.json  estimates.json
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_0/report/: index.html
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_1/base/: estimates.json  sample.json
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_1/new/: tukey.json
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_1/report/: index.html
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_10/base/: sample.json
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/eval_pos_10/new/: estimates.json  tukey.json
research/reports/Mon Nov 11 00:10:49 WIB 2024/eval_bench/report/: index.html
research/reports/Mon Nov 11 00:10:49 WIB 2024/iai/: cachegrind.out.board_setup.old  cachegrind.out.evaluation_benches  cachegrind.out.evaluation_benches.old  cachegrind.out.iai_calibration.old  cachegrind.out.move_gen  cachegrind.out.move_gen.old
research/reports/Mon Nov 11 00:10:49 WIB 2024/report/: index.html
research/reports/Mon Nov 11 13:08:23 WIB 2024/iai/: cachegrind.out.board_setup  cachegrind.out.board_setup.old  cachegrind.out.evaluation_benches  cachegrind.out.iai_calibration  cachegrind.out.iai_calibration.old  cachegrind.out.move_gen
research/reports/Mon Nov 11 13:08:23 WIB 2024/report/: report.html
research/reports/Mon Nov 11 13:08:23 WIB 2024/search_bench/report/: report.html
research/reports/Sun Dec  1 02:53:48 WIB 2024/iai/: cachegrind.out.board_setup  cachegrind.out.board_setup.old  cachegrind.out.evaluation_benches  cachegrind.out.evaluation_benches.old  cachegrind.out.iai_calibration  cachegrind.out.iai_calibration.old  cachegrind.out.move_gen  cachegrind.out.move_gen.old
research/reports/Sun Dec  1 02:53:48 WIB 2024/report/: index.html
research/reports/Wed Nov 13 13:40:59 WIB 2024/iai/: cachegrind.out.board_setup  cachegrind.out.evaluation_benches  cachegrind.out.iai_calibration  cachegrind.out.move_gen
research/reports/Wed Nov 13 13:40:59 WIB 2024/report/: index.html
research/reports/Wed Nov 13 13:40:59 WIB 2024/search_bench/report/: index.html
research/scratch/: process.rs
research/scratch/threads/: mod.rs
src/: bot.rs  evaluation.rs  lib.rs  main.rs  move_generation.rs  opening_book.rs  read_book.rs  scratch.rs  trial.rs  uci.rs  util.rs
src/benches/: d6.rs  eval.rs  eval_grind.rs  iterative_deepening.rs  move_gen.rs  move_gen_grind.rs  ngm.rs  ngm_full.rs  quick_search.rs
src/engine/: book.rs  debug.rs  engine_opts.rs  lib.rs  material.rs  mod.rs  move_generation.rs  opts.rs  parameters.rs  position.rs  positioning.rs  search.rs  timing.rs  uci.rs  util.rs
src/engine/evaluation/: bitboards.rs  material.rs  mod.rs  position.rs
src/engine/evaluation/tests/: mod.rs  positions.rs
src/engine/move_generation/: heuristics.rs  history.rs  mod.rs  moveordering.rs  ordering.rs
src/engine/move_generation/tests/: heuristics.rs  moveordering.rs  ordering.rs
src/engine/search/: main_search.rs  mod.rs  moveordering.rs  mv_heuristics.rs  negamax.rs  nodes.rs  quiescence.rs
src/engine/search/tests/: moveordering.rs  negatest.rs
src/engine/setup/: depth.rs  display.rs  mod.rs  trait_impls.rs  values.rs
src/engine/transposition_table/: bounds.rs  empty_table.rs  entry.rs  mod.rs  vl.rs
src/engine/transposition_table/tests/: mod.rs
src/experiments/: mod.rs  moveordering.rs  positionstuff.rs
src/game/: evaluate.rs  game_object.rs  making_moves.rs  mod.rs  stockfish_evaluation.rs
src/refactor/: move_generation.rs
src/sandy/: main.rs
src/sandy/player/: mod.rs  parse_move.rs
src/sandy/uci/: mod.rs  search_controls.rs  time_control.rs
src/zobrist/: mod.rs
temp/: bot.rs  botOld.rs  evaluate.rs  full_gen_bench.rs  game_object.rs  making_moves.rs  mod.rs  movegen_bench.rs  parameters.rs  util.rs
temp/refactor/: evaluation.rs  move_generation.rs  opening_book.rs  read_book.rs  scratch.rs
tests/: 10s.rs  1m.rs  d6.rs  mate.rs  prune.rs
tests/shared/: mod.rs
(+1543 files in other folders)
