[package]
name = "chesseng"
version = "0.3.3"
edition = "2021"
authors = ["Andreas Tsatsanis"]

[lib]
name = "sandy_engine"
path = "src/engine/lib.rs"
bench = false

[[bin]]
name = "chesseng"
path = "src/sandy/main.rs"
bench = false

[dependencies]
chess = "3.2.0"
anyhow = "1.0.92"
vampirc-uci = {version = "0.11", features = ["chess"]}
log = { version = "0.4", features = [] }
colog = "1.3.0"
chrono = "0.4.38"
inquire = "0.7.5"
smallvec = "1.13.2"
lockfree = "0.5.1"
#jja = { version = "0.9.1", features = [] }

[dev-dependencies]
criterion = { version = "0.5.1", features = [] }
iai = "0.1.1"
colored = "2.1.0"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = true
codegen-units = 1 # slow build but max optimisations
rpath = false

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
redundant_static_lifetimes = "allow"
missing_docs_in_private_items = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

[[bench]]
name = "ngm"
path = "src/benches/ngm_full.rs"
harness = false

[[bench]]
name = "d6"
path = "src/benches/d6.rs"
harness = false

[[bench]]
name = "qs"
path = "src/benches/quick_search.rs"
harness = false

[[bench]]
name = "eval"
path = "src/benches/eval.rs"
harness = false

[[bench]]
name = "eval_grind"
path = "src/benches/eval_grind.rs"
harness = false

[[test]]
name = "10s"
path = "tests/10s.rs"

[[test]]
name = "d6"
path = "tests/d6.rs"

[[test]]
name = "mate"
path = "tests/mate.rs"
